--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/project-theming.scss"
             ],
             "scripts": []
           },
@@ -88,7 +88,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/project-theming.scss"
             ],
             "scripts": []
           }
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Centre-Equestre-GUI"
+    }
+  },
+  "defaultProject": "Centre-Equestre-GUI",
+  "cli": {
+    "analytics": "6ca7b835-3be3-410d-a05b-1b937a271b10"
+  }
 }
