--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.1",
+    "@angular/animations": "^10.1.4",
+    "@angular/cdk": "^10.2.3",
     "@angular/common": "~10.1.1",
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
     "@angular/forms": "~10.1.1",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^10.2.3",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
     "@angular/router": "~10.1.1",
+    "material-design-icons": "^3.0.1",
+    "material-design-icons-iconfont": "^6.1.0",
+    "node-sass": "^4.14.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
