--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --watch",
     "test": "ng test",
     "lint": "ng lint",
+    "dev": "lite-server --baseDir='dist/Centre-Equestre-GUI'",
     "e2e": "ng e2e"
   },
   "private": true,
